<resources>
    DisplayMetrics displayMetrics = context.getResources().getDisplayMetrics();
    float dpHeight = displayMetrics.heightPixels / displayMetrics.density;
    float dph = dpHeight/2;
    float dpWidth = displayMetrics.widthPixels / displayMetrics.density;
    float dpw = dpWidth/2;
    <string name="app_name">Life AtCSEDU</string>
    <string name="batch">Batch</string>
    <string name="password">Password</string>
    <string name="roll">Roll</string>
    <string name="email">Email</string>
    <string name="done">Done</string>
    <string name="enter_email">Enter Email</string>
    <string name="name">Name</string>
    <string name="send">Send</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="phone">Phone number</string>
    <string name="height_half">dph</string>
    <string name="width_half">dpw</string>
</resources>
