<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <EditText
        android:id="@+id/regiUsernameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="0dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:padding="8dp" />

    <EditText
        android:id="@+id/fullNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regiPasswordField"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="Full Name"
        android:inputType="textPersonName"
        android:padding="8dp" />

    <EditText
        android:id="@+id/regiPasswordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regiUsernameField"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp" />

    <EditText
        android:id="@+id/batchField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullNameField"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/batch"
        android:inputType="textPersonName"
        android:padding="8dp" />

    <EditText
        android:id="@+id/rollField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/batchField"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/roll"
        android:inputType="textPersonName"
        android:padding="8dp" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rollField"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="8dp" />

    <Button
        android:id="@+id/doneButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/done" />
</RelativeLayout>